client/src/globalstyle.css
/*? FUENTES de GOOGLE FONTS = ITALIANA - ROBOTO -   */
@import url("https://fonts.googleapis.com/css2?family=Italiana&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

:root {
  --italian-flag-green: #008c45;
  --italian-flag-white: #f4f5f0;
  --italian-flag-red: #cd212a;
  --italian-flag-green-traslucent: #008c45c8;
  --italian-flag-white-traslucent: #f4f5f0c8;
  --italian-flag-red-traslucent: #cd212ac8;

  --headers-font: "Italiana", serif;
  --text-font: "Roboto", sans-serif;
}

body {
  background-image: linear-gradient(
    45deg,
    var(--italian-flag-green-traslucent) 16.67%,
    var(--italian-flag-white-traslucent) 16.67%,
    var(--italian-flag-white-traslucent) 33.33%,
    var(--italian-flag-red-traslucent) 33.33%,
    var(--italian-flag-red-traslucent) 50%,
    var(--italian-flag-green-traslucent) 50%,
    var(--italian-flag-green-traslucent) 66.67%,
    var(--italian-flag-white-traslucent) 66.67%,
    var(--italian-flag-white-traslucent) 83.33%,
    var(--italian-flag-red-traslucent) 83.33%,
    var(--italian-flag-red-traslucent) 100%
  );

  background-size: 150px 150px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--headers-font);
  margin: 0;
}

p,
span,
li,
label,
option,
select,
input,
textarea,
button {
  font-family: var(--text-font);
  margin: 0;
}

